I have moved all form elements for creating an account on the home page into a table in order to achieve proper alignments. I have also modified mainStyle.css by removing selectors that no longer select anything in the form.

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -17,15 +17,6 @@ form{
 	height: 1000px;
 }
 
-#createAccount p{
-        
-}
-
-#createAccount input{
-
-        display:inline;
-}
-
 #Flavor {
 
         width:1000px;
